--- a/MaterialDesignFixedHintTextBox/MainWindow.xaml
+++ b/MaterialDesignFixedHintTextBox/MainWindow.xaml
@@ -5,9 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FloatingLabelComboBox.CustomControls"
         xmlns:materialdesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:viewmodels="clr-namespace:MaterialDesignFixedHintTextBox.ViewModels" xmlns:sys="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-
+        Title="MainWindow" Height="450" Width="800"
+        DataContext="{DynamicResource vm}">
+    <Window.Resources>
+        <viewmodels:StudentsViewModel x:Key="vm"/>
+        <CollectionViewSource x:Key="grades" Source="{Binding StudentsGrades}"/>
+        <sys:Int32 x:Key="inc">1</sys:Int32>
+        <sys:Int32 x:Key="dec">-1</sys:Int32>
+    </Window.Resources>
     <Grid>
         <Grid.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
@@ -17,33 +24,52 @@
         </Grid.Background>
         <StackPanel Margin="40">
             <Label Content="Students Grade" Foreground="WhiteSmoke" FontSize="20"/>
-            <StackPanel Margin="5 30 0 0" Orientation="Horizontal" Height="80">
-                <local:FloatingLabelComboBox  x:Name="CmbStudentName"
-                                         Width="160"
-                                         LabelText="Student" 
-                                         Foreground="AliceBlue" 
-                                         LabelForeground="LimeGreen"
-                                         materialdesign:HintAssist.Hint="Student"
-                                         FontSize="20"
-                                         LabelFontSize="13"
-                             SelectedValue="{Binding SelectedStudent.StudentID,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
-                             SelectedValuePath="StudentId"
-                             DisplayMemberPath="StudentName"
+            <UniformGrid Rows="1" Margin="5 30 0 0" Height="80">
+                <local:FloatingLabelComboBox
+                    x:Name="CmbStudentName"
+                    Width="160"
+                    LabelText="Student" 
+                    Foreground="AliceBlue" 
+                    LabelForeground="LimeGreen"
+                    materialdesign:HintAssist.Hint="Student"
+                    FontSize="20"
+                    LabelFontSize="13"
+                    ItemsSource="{Binding Students}"
+                    SelectedItem="{Binding SelectedStudent}"
+                    DisplayMemberPath="StudentName"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Selector.SelectionChanged="OnSelectedStudentChanged"
                 />
-                <local:FloatingLabelComboBox x:Name="CmbStudentGrade"
-                                         Width="160" 
-                                         Margin="40 0 0 0"
-                                         LabelText="Grade" 
-                                         Foreground="AliceBlue" 
-                                         LabelForeground="LimeGreen"
-                                         materialdesign:HintAssist.Hint="Grade"
-                                         FontSize="20"
-                                         LabelFontSize="13"
-                                         SelectedItem="{Binding SelectedStudent.StudentsGrade,Mode=TwoWay,UpdateSourceTrigger=PropertyChanged}"
+                <local:FloatingLabelComboBox
+                    x:Name="CmbStudentGrades"
+                    Width="160"
+                    LabelText="Grades"
+                    Foreground="AliceBlue" 
+                    LabelForeground="LimeGreen"
+                    materialdesign:HintAssist.Hint="Student"
+                    FontSize="20"
+                    LabelFontSize="13"
+                    ItemsSource="{Binding Mode=OneWay, Source={StaticResource grades}}"
+                    SelectedItem="{Binding SelectedStudentsGrade, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    HorizontalAlignment="Center" VerticalAlignment="Center"
                 />
-            </StackPanel>
+                <local:FloatingLabelComboBox
+                    x:Name="CmbStudentGrade"
+                    Width="160" 
+                    LabelText="Grade" 
+                    Foreground="AliceBlue" 
+                    LabelForeground="LimeGreen"
+                    materialdesign:HintAssist.Hint="Grade"
+                    FontSize="20"
+                    LabelFontSize="13"
+                    ItemsSource="{Binding Grades}"
+                    SelectedItem="{Binding SelectedStudentsGrade.StudentsGrade, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                    HorizontalAlignment="Center" VerticalAlignment="Center"
+                />
+            </UniformGrid>
             <StackPanel Orientation="Horizontal">
-                <RepeatButton
+                <!--<RepeatButton
                             x:Name="NavigatePreviousButton"
                             Width="25" Height="25"
                             Click="RepeatButton_Click"
@@ -57,7 +83,7 @@
                             Margin="20 0 0 0"
                             >
                     <materialdesign:PackIcon Kind="NavigateNext" Width="30" Height="30" Margin="-20 -5 0 0"/>
-                </RepeatButton>
+                </RepeatButton>-->
             </StackPanel>
         </StackPanel>
     </Grid>
