--- a/MaterialDesignFixedHintTextBox/Themes/Generic.xaml
+++ b/MaterialDesignFixedHintTextBox/Themes/Generic.xaml
@@ -2,13 +2,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
      xmlns:materialdesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:local="clr-namespace:FloatingLabelComboBox">
+    xmlns:local="clr-namespace:FloatingLabelComboBox"
+    xmlns:cc="clr-namespace:FloatingLabelComboBox.CustomControls">
 
 
-    <Style TargetType="{x:Type local:CustomControls.FloatingLabelComboBox}">
+    <Style TargetType="{x:Type cc:FloatingLabelComboBox}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type local:CustomControls.FloatingLabelComboBox}">
+                <ControlTemplate TargetType="{x:Type cc:FloatingLabelComboBox}">
                     <StackPanel FlowDirection="LeftToRight">
                         <Label Content="{TemplateBinding LabelText}"
                                Foreground="{TemplateBinding LabelForeground}"
@@ -20,9 +21,9 @@
                         <ComboBox x:Name="comboBox"
                                   Text="{TemplateBinding Text}"
                                   ItemsSource="{TemplateBinding ItemsSource}"
-                                  SelectedItem="{TemplateBinding SelectedItem}"
+                                  SelectedItem="{Binding SelectedItem, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
                                   SelectedValuePath="{TemplateBinding SelectedValuePath}"
-                                  SelectedValue="{TemplateBinding SelectedValue}" 
+                                  SelectedValue="{Binding SelectedValue, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}" 
                                   DisplayMemberPath="{TemplateBinding DisplayMemberPath}"
                                   HorizontalAlignment="Stretch"
                                   VerticalAlignment="Center"
