--- a/MaterialDesignFixedHintTextBox/Themes/Generic.xaml
+++ b/MaterialDesignFixedHintTextBox/Themes/Generic.xaml
@@ -1,15 +1,21 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-     xmlns:materialdesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:local="clr-namespace:FloatingLabelComboBox"
-    xmlns:cc="clr-namespace:FloatingLabelComboBox.CustomControls">
+    xmlns:local="clr-namespace:FloatingLabelComboBox">
+    <ResourceDictionary.MergedDictionaries>
+        <!--<ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Dark.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesignTheme.Defaults.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Primary/MaterialDesignColor.Green.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignColors;component/Themes/Recommended/Accent/MaterialDesignColor.Lime.xaml"/>-->
+
+        <ResourceDictionary Source="pack://application:,,,/MaterialDesignFixedHintTextBox;component/CustomControls/FloatingHintAssistComboBox.Template.xaml"/>
+    </ResourceDictionary.MergedDictionaries>
 
 
-    <Style TargetType="{x:Type cc:FloatingLabelComboBox}">
+    <!--<Style TargetType="{x:Type cc:FloatingHintAssistComboBox}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type cc:FloatingLabelComboBox}">
+                <ControlTemplate TargetType="{x:Type cc:FloatingHintAssistComboBox}">
                     <StackPanel FlowDirection="LeftToRight">
                         <Label Content="{TemplateBinding LabelText}"
                                Foreground="{TemplateBinding LabelForeground}"
@@ -37,5 +43,5 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
-    </Style>
+    </Style>-->
 </ResourceDictionary>
