--- a/MaterialDesignFixedHintTextBox/CustomControls/FloatingHintAssistComboBox/FloatingHintAssistComboBox.Template.xaml
+++ b/MaterialDesignFixedHintTextBox/CustomControls/FloatingHintAssistComboBox/FloatingHintAssistComboBox.Template.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:theme="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero2"
-                    xmlns:local="clr-namespace:FloatingHintAssistComboBox.CustomControls"
+                    xmlns:local="clr-namespace:CustomControls"
                     xmlns:materialdesign="http://materialdesigninxaml.net/winfx/xaml/themes"
                     xmlns:wpf="clr-namespace:MaterialDesignThemes.Wpf;assembly=MaterialDesignThemes.Wpf">
     <ControlTemplate TargetType="{x:Type Button}"
